--- a/package.json
+++ b/package.json
@@ -9,16 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coreui/icons": "^3.0.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource-variable/geist-mono": "^5.2.5",
+    "@fontsource-variable/inter": "^5.2.5",
+    "@headlessui/react": "^2.2.0",
+    "@mui/icons-material": "^6.4.8",
+    "@mui/material": "^6.4.8",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "contentful": "^11.5.7",
+    "disposable-email-domains": "^1.0.62",
+    "embla-carousel-react": "^8.5.2",
+    "flag-icons": "^7.3.2",
+    "groq": "^3.79.0",
+    "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "lucide-react": "^0.482.0",
+    "motion": "^12.5.0",
+    "next": "14.2.24",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.24"
+    "react-i18next": "^15.4.1",
+    "resend": "^4.1.2",
+    "swiper": "^11.2.5",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@iconify/react": "^5.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "fluid-tailwind": "^1.0.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
