feat: atualizar fontes tipográficas e melhorar o suporte de localização
- Adicionadas as fontes IBM Plex Sans e Space Grotesk ao package.json e ao package-lock.json.
- Atualizada a configuração do Tailwind para incluir as novas famílias tipográficas.
- Substituída a fonte Inter por IBM Plex Sans em globals.css para melhor tipografia.
- Removidos os arquivos de localização em espanhol e ajustadas as opções de idioma para suportar apenas inglês e português.
- Aprimorados os componentes About e Projects para refletir a estrutura de localização atualizada.
- Atualizados o currículo e as descrições de projetos para maior clareza e relevância.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource-variable/geist-mono": "^5.2.5",
+    "@fontsource-variable/ibm-plex-sans": "^5.2.8",
     "@fontsource-variable/inter": "^5.2.5",
+    "@fontsource-variable/space-grotesk": "^5.2.10",
     "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^6.4.8",
     "@mui/material": "^6.4.8",
